Use make instead of ant. Default to Mac paths.